<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    android:elevation="3dp"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorSurface"
            app:menu="@menu/menu_entry"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/expense_entry"
            tools:subtitle="Hello" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/ln_entry"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/sv_entry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/rl_action"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="?colorSurface"
            app:layout_constraintWidth_max="@dimen/with_layout_min_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/grid_2">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edl_name"
                    style="?attr/textInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="@dimen/grid_3"
                    android:layout_marginTop="@dimen/grid_3"
                    android:layout_marginEnd="@dimen/grid_3"
                    android:textAlignment="viewStart">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:imeOptions="actionNext"
                        android:maxLength="20"
                        android:nextFocusDown="@id/edt_amount"
                        android:singleLine="true"
                        android:textAlignment="viewStart" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edl_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edl_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="@dimen/grid_3"
                    android:layout_marginTop="@dimen/grid_3"
                    android:layout_marginEnd="@dimen/grid_3"
                    android:hint="@string/amount"
                    app:suffixTextAppearance="?textAppearanceBody1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="numberDecimal"
                        android:maxLength="10"
                        android:nextFocusDown="@id/edt_note"
                        android:singleLine="true"
                        android:textAppearance="?textAppearanceCurrencySmall" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edl_amount"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/grid_3"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/grid_3"
                    android:paddingEnd="@dimen/grid_3"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_category" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edl_description"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@id/rv_category"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="@dimen/grid_3"
                    android:layout_marginTop="@dimen/grid_3"
                    android:layout_marginEnd="@dimen/grid_3"
                    android:layout_marginBottom="@dimen/grid_3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_note"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top"
                        android:hint="@string/note"
                        android:maxLength="100"
                        android:nextFocusDown="@id/btn_save" />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>

        <RelativeLayout
            android:id="@+id/rl_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="?colorSurface"
            android:elevation="@dimen/grid_1"
            android:foreground="?selectableItemBackground">

            <RelativeLayout
                android:id="@+id/rl_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:elevation="@dimen/grid_1"
                android:layout_alignParentTop="true"
                android:foreground="?selectableItemBackground"
                android:paddingVertical="@dimen/grid_2">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="@dimen/grid_3"
                    android:layout_marginTop="@dimen/grid_1" />

                <TextView
                    android:id="@+id/tv_repeat"
                    style="?textAppearanceBodyLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/switch_repeat"
                    android:layout_marginStart="@dimen/grid_3"
                    android:layout_toEndOf="@id/switch_repeat"
                    android:text="Repeat Entry" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_save"
                style="@style/Widget.ProExpense.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_repeat"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginBottom="@dimen/grid_3"
                android:text="@string/save" />

        </RelativeLayout>

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
