<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    tools:context=".ui.MainActivity" >

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/fc_main"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            tools:layout="@layout/frag_home"
            app:navGraph="@navigation/main_nav" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fb_main_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/grid_3"
            android:layout_marginBottom="32dp"
            android:scaleType="center"
            android:tint="?colorOnPrimary"
            app:backgroundTint="?colorPrimary"
            android:layout_gravity="end|bottom"
            app:srcCompat="@drawable/ic_add" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nv_main"
        android:layout_width="wrap_content"
        style="?attr/proExpenseNavigationViewStyle"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/layout_header"
        app:menu="@menu/menu_home" />

</androidx.drawerlayout.widget.DrawerLayout>
