...
    <string name="date">Date</string>
    <string name="spend">Spend</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="save">Save</string>
    <string name="note">Note</string>
    <string name="update">Update</string>
    <string name="update_data">Update Data</string>
    <string name="expense_entry">Expense Entry</string>
    <string name="income">Income</string>
    <string name="social">Social</string>
    <string name="clothes">Clothes</string>
    <string name="housing">Housing</string>
...
    <string name="education">Education</string>
    <string name="transportation">Transportation</string>
    <string name="health_care">Health Care</string>
    <string name="item_deleted">Item Deleted</string>
    <string name="multi_item_deleted">Items Deleted</string>
    <string name="data_updated">Data Updated!</string>
    <string name="empty_cost">Cost is Empty</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_description">We went to know what you thought of your experience at Pro Expense app so we\'d love to hear you feedback.</string>
    <string name="email">Email</string>
    <string name="your_comments">Your Comments*</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="empty_comment">Empty Comment</string>
...
